--- a/build.xml
+++ b/build.xml
@@ -103,8 +103,8 @@ the built process is not stopped.
 
 Here is a list of such modules and what you have to download to build them:
 
- org.apache.fop.apps.XTCommandLine ===>
-       James Clark's XT (http://www.jclark.com/)
+ - Jimi
+ - JAI
 
 2) I see a lot of warnings starting like this: "Warning: file modified in the future:"
 Sometimes ant gives out this warnings, but the build is finished without any problems
@@ -293,7 +293,6 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
   </target>
 
   <target name="init-avail">
-    <available property="xt.present" classname="com.jclark.xsl.sax.XSLProcessor"/>
     <available property="jimi.present" classname="com.sun.jimi.core.Jimi"/>
     <available property="jai.present" classname="javax.media.jai.JAI"/>
 
@@ -371,15 +370,6 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
 
 
   <!-- =================================================================== -->
-  <!-- copies some source files if xt is present                           -->
-  <!-- =================================================================== -->
-  <target name="prepare-xt" depends="prepare" if="xt.present">
-    <copy todir="${build.src}">
-      <fileset dir="${src.dir}" includes="**/XT*,**/PDFOutputHandler.java"/>
-    </copy>
-  </target>
-
-  <!-- =================================================================== -->
   <!-- copies special image class only if Jimi library is present          -->
   <!-- =================================================================== -->
   <target name="prepare-jimi" depends="prepare" if="jimi.present">
@@ -418,11 +408,11 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
   <!-- =================================================================== -->
   <!-- Prepares the source code                                            -->
   <!-- =================================================================== -->
-  <target name="prepare-src" depends="prepare, prepare-xt, prepare-jimi, prepare-jai, prepare-xalan1, prepare-trax">
+  <target name="prepare-src" depends="prepare, prepare-jimi, prepare-jai, prepare-xalan1, prepare-trax">
     <!-- copy src files -->
     <copy todir="${build.src}">
       <fileset dir="${src.dir}" 
-         excludes="**/Makefile*, **/package.html, **/XT*,**/PDFOutputHandler.java,**/${jimi},**/${jai},**/${xsltransform},**/${trax},**/${xalan1},**/apps/TraxInputHandler.java"/>
+         excludes="**/package.html, **/${jimi},**/${jai},**/${xsltransform},**/${trax},**/${xalan1},**/apps/TraxInputHandler.java"/>
     </copy>
   </target>
 
