Added lib/readme to the binary distribution
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194868 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -143,6 +143,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
        <include name="lib/avalon.LICENSE.txt"/>
        <include name="lib/ant-1.4.1.jar"/>
        <include name="lib/ant.license.txt"/>
+       <include name="lib/readme"/>
     </fileset>
 
     <fileset dir="${basedir}" id="dist.src">
