added README for xml-apis.jar to bin distribution
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194976 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -139,6 +139,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
        <include name="lib/xercesImpl-2.0.1.jar"/>
        <include name="lib/xerces.LICENSE.txt"/>
        <include name="lib/xml-apis.jar"/>
+       <include name="lib/xml-apis.README.txt"/>
        <include name="lib/xalan-2.3.1.jar"/>
        <include name="lib/xalan.LICENSE.txt"/>
        <include name="lib/batik.jar"/>
