Incremented FOP version do 0.20.5cvs PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194982 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -183,7 +183,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
     <tstamp/>
     <property name="Name" value="Fop"/>
     <property name="name" value="fop"/>
-    <property name="version" value="0.20.4"/>
+    <property name="version" value="0.20.5cvs"/>
     <filter  token="version" value="${version}"/>
     <property name="year" value="1999-2002"/>
 
